--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/firebase/vite.config.ts",
+    "build.server": "vite build --ssr src/entry.ssr.tsx",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "firebase deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "qwik build && firebase emulators:start",
     "start": "vite --open --mode ssr",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
