--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "clean": "rimraf dist tmp node_modules backend/node_modules frontend/node_modules",
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build --ssr src/entry.ssr.tsx",
+    "build.server": "vite build -c adapters/azure-swa/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "clean": "rimraf dist tmp node_modules backend/node_modules frontend/node_modules",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "swa start",
     "start": "vite --open --mode ssr",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -28,6 +29,8 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@azure/functions": "^3.5.0",
+    "@azure/static-web-apps-cli": "^1.1.1",
     "@builder.io/qwik": "^1.16.0",
     "@builder.io/qwik-city": "^1.16.0",
     "@eslint/js": "latest",
