--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -20,11 +20,12 @@
   "platform": {
     "apiRuntime": "node:18"
   },
-  "responseOverrides": {
-    "build/**/*.js": {
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    }
+  "globalHeaders": {
+    "Cache-Control": "public, max-age=3600"
+  },
+  "mimeTypes": {
+    ".js": "text/javascript",
+    ".css": "text/css",
+    ".json": "application/json"
   }
 }
