Update static web app route configuration

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -2,12 +2,16 @@
   "routes": [
     {
       "route": "*",
-      "methods": ["POST", "PUT", "DELETE"],
+      "methods": [
+        "POST",
+        "PUT",
+        "DELETE"
+      ],
       "rewrite": "/api/render"
     },
     {
       "route": "/",
-      "rewrite": "/api/render"
+      "rewrite": "/"
     },
     {
       "route": "/index.html",
