--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/azure-swa/vite.config.ts",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "clean": "rimraf dist tmp node_modules backend/node_modules frontend/node_modules",
     "dev": "vite --mode ssr",
@@ -20,7 +20,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "swa start",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -29,15 +29,17 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@azure/functions": "^3.5.0",
-    "@azure/static-web-apps-cli": "^1.1.1",
     "@builder.io/qwik": "^1.16.0",
     "@builder.io/qwik-city": "^1.16.0",
     "@eslint/js": "latest",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/jest-dom": "^6.8.0",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.19",
     "@types/node": "20.19.0",
     "autoprefixer": "^10.4.21",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.2",
     "eslint": "9.32.0",
     "eslint-plugin-qwik": "^1.16.0",
     "globals": "16.3.0",
@@ -55,6 +57,7 @@
   },
   "dependencies": {
     "@js-temporal/polyfill": "^0.5.1",
+    "express": "4.20.0",
     "zod": "^4.1.5"
   }
 }
