--- a/.github/workflows/main_turno-app.yml
+++ b/.github/workflows/main_turno-app.yml
@@ -25,14 +25,15 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd frontend
           npm install
-          npm run build --if-present
+          npm run build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: frontend
 
   deploy:
     runs-on: ubuntu-latest
