--- a/.github/workflows/main_turno-app.yml
+++ b/.github/workflows/main_turno-app.yml
@@ -25,7 +25,6 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd frontend
           npm install
           npm run build
 
@@ -33,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: frontend
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
