--- a/.github/workflows/main_turno-app.yml
+++ b/.github/workflows/main_turno-app.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          # Set build-time environment variables (optional, runtime resolution is primary)
+          VITE_API_URL: ${{ vars.VITE_API_URL || '' }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
